# partial_application

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
