[package]
name = "partial_application"
version = "0.2.0"
authors = ["Emerentius"]

license = "MIT/Apache-2.0"
repository = "https://github.com/emerentius/partial_application"
documentation = "https://docs.rs/partial_application"

description = "Defines the partial! macro for partial function application"

[dependencies]
