[package]
name = "partial_application"
version = "0.2.0"
authors = ["Emerentius"]

license = "MIT/Apache-2.0"
repository = "https://github.com/emerentius/partial_application"
documentation = "https://docs.rs/partial_application"
readme = "README.md"

description = "Offers partial function application through the partial! macro"

[dependencies]
