[package]
name = "partial_application"
version = "0.2.0"
authors = ["Emerentius"]

license = "MIT/Apache-2.0"
repository = "https://github.com/emerentius/partial_application"
documentation = "https://docs.rs/partial_application"
readme = "README.md"

keywords = ["argument", "parameter", "binding", "bind", "partial-application"]
categories = ["no-std", "rust-patterns"]

description = "partial function application via the partial! macro"

[dependencies]
